<resources>
    <string name="app_name">AndroidMail</string>
    <string name="login_title">添加邮箱账号</string>
    <string name="mail_account">邮箱账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记邮箱密码?</string>
    <string name="register_account">注册新邮箱</string>
    <string name="please_set_account">请输入邮箱地址</string>
    <string name="mail_address">邮箱地址</string>
    <string name="mail_end">\@sunzhongyang.com</string>
    <string name="check_name_authentication">检查合法性</string>
    <string name="please_set_password">请设置你的邮箱密码</string>
    <string name="next_step">下一步</string>
    <string name="set_password">设置密码</string>
    <string name="confirm_password">再次输入密码</string>
    <string name="mail">邮件</string>
    <string name="contacts">通讯录</string>
    <string name="setting">设置</string>
    <string name="inbox">收件箱</string>
    <string name="all">全部</string>
    <string name="unread">未读</string>
    <string name="sendbox">发件箱</string>
    <string name="deleted">已删除</string>
    <string name="write_mail">写邮件</string>
    <string name="add_contact">新建联系人</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="name">姓名</string>
    <string name="work">单位</string>
    <string name="send">发送</string>
    <string name="receiver">收件人: </string>
    <string name="sender">发件人: </string>
    <string name="topic">主题</string>
    <string name="edit">编辑</string>
    <string name="test_name">欧阳丹华</string>
    <string name="time">时间:</string>
</resources>
