<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="12dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/back"
        android:background="@color/transplant"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_set_account"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textColor="@color/realBlack"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edt_bg_selected">

        <EditText
            android:id="@+id/setAccountEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/mail_address"
            android:textColorHint="@color/grey"
            android:textSize="16sp"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="12dp"
            android:paddingStart="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@null"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="16sp"
            android:textColor="@color/realBlack"
            android:text="@string/mail_end"/>

    </LinearLayout>

    <Button
        android:id="@+id/accountNameNextStep"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="38dp"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/colorAccent"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:alpha="0.6"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:id="@+id/checkNameAuthentication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_name_authentication"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">
        </TextView>
    </RelativeLayout>

</LinearLayout>
